--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-html, body, ul, li, td {
+html, body, ul, li, td, header, nav {
   margin: 0;
   padding: 0;
 }
@@ -25,6 +25,9 @@ a {
 }
 a:hover {
   color: #535bf2;
+}
+.hover-EDEDED:hover {
+  background-color: #EDEDED;
 }
 
 .page-body {
