--- a/src/style.css
+++ b/src/style.css
@@ -34,7 +34,9 @@ a:hover {
 .hover-EDEDED:hover {
   background-color: #EDEDED;
 }
-
+.li-style-none {
+  list-style: none;
+}
 .page-body {
   width: 100%;
   margin: 0 auto;
@@ -108,6 +110,19 @@ p.ac-center > img, p.ac-center > a {
   animation: main-1 2s;
 }
 
+.flex {
+  display: flex;
+}
+.flex-wrap {
+  flex-wrap: wrap;
+}
+.flex-ai-center {
+  align-items: center;
+}
+.flex-jc-center {
+  justify-content: center;
+}
+
 .content {
   padding: 20px;
   margin: 80px 40px 0;
@@ -138,6 +153,15 @@ p.ac-center > img, p.ac-center > a {
 }
 
 @keyframes logo {
+  to {
+    opacity: 1;
+  }
+  from {
+    opacity: 0;
+  }
+}
+
+@keyframes opacitys {
   to {
     opacity: 1;
   }
