--- a/src/style.css
+++ b/src/style.css
@@ -119,20 +119,21 @@ button {
 }
 #main {
   flex: auto;
+  overflow: hidden;
   min-height: 500px;
   margin-bottom: 50px;
 }
 .hr {
   border-bottom: 1px solid #ccc;
 }
-.h1 {
+h1 {
   font-size: 1.5rem;
   font-weight: bold;
 }
-.ul {
+.page-body ul {
   margin-left: 20px;
 }
-.ul li {
+.page-body ul li {
   margin: 10px 0;
 }
 .ul-li-sstyle-none li {
@@ -151,19 +152,6 @@ p.ac-center > img, p.ac-center > a {
   margin: 5px;
 }
 
-.table-a {
-  border-collapse: collapse;
-}
-.table-a thead tr, .table-a tbody tr, .table-a tfoot tr {
-  text-align: center;
-}
-.table-a td {
-  padding: 10px;
-}
-.table-a td, .table-a th {
-  border: 1px solid #ccc;
-}
-
 .stress {
   margin: 0 2px;
   padding: 3px;
@@ -179,7 +167,6 @@ p.ac-center > img, p.ac-center > a {
 
 .title {
   text-align: center;
-  color: white;
   font-size: 40px;
   font-weight: bold;
   animation: main-1 1s;
@@ -216,6 +203,45 @@ p.ac-center > img, p.ac-center > a {
   animation: logo 2s;
 }
 
+/* md代码框样式 */
+pre {
+  overflow: auto;
+  font-size: 1rem;
+  padding: 10px 20px;
+  margin: 10px 0;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+pre code {
+  white-space: pre-wrap;
+  overflow: hidden;
+}
+/* .md-table {
+  min-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+} */
+.custom-table {
+  display: block;
+  border-collapse: collapse;
+}
+
+.custom-table thead, .custom-table tbody {
+  width: 100%;
+}
+
+table thead tr, table tbody tr, table tfoot tr {
+  text-align: center;
+}
+table td {
+  padding: 10px;
+}
+table td, table th {
+  border: 1px solid #ccc;
+}
+
+
 @media screen and (max-width: 768px) {
   .content {
     margin: 80px 20px 0;
@@ -224,6 +250,11 @@ p.ac-center > img, p.ac-center > a {
 @media screen and (max-width: 600px) {
   .img-content {
     max-width: 100%;
+  }
+}
+@media screen and (max-width: 365px) {
+  .custom-table {
+    overflow-x: scroll;
   }
 }
 
