--- a/src/style.css
+++ b/src/style.css
@@ -217,11 +217,6 @@ pre code {
   white-space: pre-wrap;
   overflow: hidden;
 }
-/* .md-table {
-  min-width: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-} */
 .custom-table {
   display: block;
   border-collapse: collapse;
@@ -241,6 +236,12 @@ table td, table th {
   border: 1px solid #ccc;
 }
 
+p code {
+  margin: 0 2px;
+  padding: 3px;
+  border-radius: 5px;
+  background-color: rgba(0, 0, 0, 0.1);
+}
 
 @media screen and (max-width: 768px) {
   .content {
